- fixed navigation bar background color bug - added “work with us” button to mobile nav - fixed background colour on mobile menu on home page

--- a/_assets/stylesheets/brewhouse.css.scss
+++ b/_assets/stylesheets/brewhouse.css.scss
@@ -247,7 +247,8 @@ hr.hr--extra-push {
 // homepage background colour hack
 
 .url_index .navbar-main,
-.url_index .page-header {
+.url_index .page-header,
+.url_index .offcanvas-menu {
   background: url('/images/bg-home.jpg');
 }
 
