--- a/_assets/stylesheets/offcanvas.scss
+++ b/_assets/stylesheets/offcanvas.scss
@@ -20,7 +20,7 @@
     width: 80%;
   }
   ul {
-    margin: 0;
+    margin: 0 0 1em;
     padding: 0;
   }
   ul li {
